<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.preference.PreferenceCategory android:title="@string/connection">

        <androidx.preference.EditTextPreference
            android:defaultValue="admin"
            android:dialogMessage="@string/enter_login"
            android:dialogTitle="@string/login"
            android:key="login"
            android:title="@string/login"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="admin"
            android:dialogMessage="@string/enter_password"
            android:dialogTitle=""
            android:key="password"
            android:title="@string/password"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="192.168.1.117"
            android:dialogMessage="@string/enter_the_host_or_domain_of_pts_device"
            android:dialogTitle="@string/host_or_domain_of_pts_device"
            android:key="host_domain"
            android:title="@string/host_or_domain"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="80"
            android:dialogMessage="@string/enter_the_http_port_number"
            android:dialogTitle="@string/http_port_number"
            android:ems="10"
            android:inputType="number"
            android:key="http_port_number"
            android:title="@string/http_port_number"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="443"
            android:dialogMessage="@string/enter_the_https_port_number"
            android:dialogTitle="@string/https_port_number"
            android:ems="10"
            android:inputType="number"
            android:key="https_port_number"
            android:title="@string/https_port_number"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.ListPreference
            android:key="protocol_preference"
            android:title="@string/protocol"
            android:summary="@string/choose_http_or_https"
            android:defaultValue="https"
            android:entries="@array/protocol_entries"
            android:entryValues="@array/protocol_values" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="digest_auth_switch"
            android:summary="@string/use_digest_access_authentication"
            android:title="@string/authentication" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/locale">

        <androidx.preference.EditTextPreference
            android:defaultValue="$"
            android:dialogMessage="@string/enter_currency_symbol"
            android:dialogTitle="@string/currency_symbol"
            android:key="currency"
            android:title="@string/currency"
            app:useSimpleSummaryProvider="true"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/business_logic">

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="nozzle_must_be_taken_switch"
            android:summary="@string/order_creation_is_not_allowed_without_picking_up_the_nozzle"
            android:title="@string/nozzle_must_be_taken" />

        <androidx.preference.EditTextPreference
            android:defaultValue="100"
            android:dialogMessage="@string/enter_the_predefined_volume"
            android:dialogTitle="@string/predefined_volume"
            android:ems="10"
            android:inputType="number"
            android:key="predefined_volume"
            android:title="@string/predefined_volume"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="100"
            android:dialogMessage="@string/enter_the_predefined_amount"
            android:dialogTitle="@string/predefined_amount"
            android:ems="10"
            android:inputType="number"
            android:key="predefined_amount"
            android:title="@string/predefined_amount"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>